Bug 1242989 - keep content insertions in a hash, r=tbsaunde